resolvendo pequenos erros

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <a href="https://www.linkedin.com/in/paulo-kau%C3%A3/" target="_blank" class="home__social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
-                        <a href="https://www.instagram.com/eukawan00/" target="_blank" class="home__social-icon">
+                        <a href="https://www.instagram.com/silva014ll_/" target="_blank" class="home__social-icon">
                             <i class="uil uil-instagram-alt"></i>
                         </a>
                         <a href="https://github.com/paulokaua014" target="_blank" class="home__social-icon">
@@ -123,7 +123,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="Curriculo-paulo" href="assets/pdf/Curriculo-paulo.pdf" class="button button--flex">
+                            <a download="Curriculo-paulo" href="assets/pdf/Curriculo2.0.pdf" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
